fitting seems to work great now!

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -1,13 +1,25 @@
 \chapter{Topological Multiferroic switching; coupling between Magnetism and Ferroelectricity in GdMn2O5}
 \section{Introduction}
-Multiferroic materials, where there are multiple ordered structures, have been studied intensely in recent times. The first reason for this is that these orders are usually coupled to some degree, allowing the indirect manipulation of one order by an external perturbation applied to the other. Secondly, this coupling enables a wealth of physical processes to be observed in these materials. Especially materials with relatively low symmetry are a veritable playground to study different effects. In the case under present scrutiny, GdMn$_2$O$_5$, the magnetic configuration that is present in the system breaks inversion symmetry and leads to a small ferroelectric polarization to show up. With an externally applied magnetic field, we can influence the magnetic order and in turn change the ferroelectric polarization through magnetostriction. Experiments have previously shown exactly this effect, but what was previously missed, is that depending on the angle of the applied magnetic field there are three distinguishable switching regimes. As will be discussed later two of these three regimes can be regarded as two topologically trivial extremes, whereas the third one that lives in the crossover region between these two orders can be regarded as topologically non-trivial in the same sense as a Thouless pump.
+Efficient control of robust order has historically been one of the main technological drivers for research in condensed matter.
+The magnetoelectric effect, i.e. the electric control of magnetic order or vice versa, is an obvious mechanism that could be exploited to achieve this control\cite{Spaldin2019,Khomskii2009,Fiebig2005,Fiebig2016,Cheong2007}.
+However, the underlying physics are not particularly well understood and candidate materials are not plentiful.
+One class of materials that has attracted much attention in recent years are the multiferroics, materials where multiple orders coexist, more specifically in this case: magnetic and ferroelectric order.
 
+Here we specifically investigate GdMn$_2$O$_5$, an example of a type-II multiferroic\cite{Khomskii2009} with ferroelectricity arising due to a magnetic ordering that breaks inversion symmetry. In contrast to type-I multiferroics, the ferroelectricity and magnetic order arise from the same underlying physics, rather than from two different `subsystems` in the same material. This leads to an enhanced coupling between the two orders allowing for excellent cross order control (in the present case we investigate the control over the ferroelectric polarization by an external magnetic field).
+Gd$^{3+}$ is special with respect to the other possible rare earths in the orthorhombic magnanites $R$Mn$_2$O$_5$, with $R$ being one of the rare earths, because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched OAM. This means that the large spin (nominally $S=7/2$) can orient itself relatively freely to optimize the magnetic interactions with its neighboring Mn atoms.
+This turns out to be one of the main reasons behind the very large electric polarization compared to other multiferroics, and even to other $R$Mn$_2$O$_5$ compounds.
+The orthorhombic manganites all have a paramagnetic space group $Pbam$ \cite{Alfonso97a}, which gets lowered to $P_ab2_1a$ when the commensurate magnetic order locks in at $T_{N} \sim 33K$, with propagation vector $\bm{k} \sim (1/2, 0.0, 0.0)$, i.e. there is a unit cell doubling along the crystalline $a$ direction. Spins are ordered ferromagnetically along the crystalline $c$ direction. This magnetic transition goes hand in hand with a sharp anomaly in the dielectric constant $\varepsilon_b$, signalling the onset of the improper ferroelectric order along the $b$ direction \cite{Lee13}. When the temperature is lowered further, the polarization $P_b$ saturates to a maximum value of around $3600 \mu C/m^2$, which is the largest of all rare-earth magnanites, but still tiny compared to proper ferroelectrics like BaTiO$_3$ with $P \sim 2 \times 10^5 \mu C/m^2$.
+The magnetic configuration features two AFM Mn chains per unit cell, that feature both $Mn^{3+}$ pyramids and $Mn^{4+}$ octahedra, as indicated by the light blue lines and purple polygons in Fig.~\ref{fig:GdMn2O5_unit_cell}. As in all other $R$Mn$_2$O$_5$ compounds, the Mn spins lie mostly along the easy axis of the Mn pyramids, making angles of $\pm 23.4^\circ$ with the $a$-axis.
+
+%Even though the AFM intrachain superexchange interactions dominate over the AFM interchain interactions, there is nonetheless a geometric frustration due to the crystal structure, which can be seen most easily seen from the Mn pentagons surrouding the Gd atoms. This means that all AFM exchanges can not be satisfied at the same time, causing certain Mn bonds between the chains to have energetically unfavorable spin alignment. This leads to the first contribution to the ferroelectric polarization through Heisenberg exchange striction, lengthening bonds that have parallel spins and shortening those that have antiparallel ones.
+
+
+This contribution is present in all orthorhombic manganites, but generally leads to a very tiny polarization \cite{Khomskii2009}.\lp{discuss about the electronic things in Khomskii and also the direct exchange optimizing FM bonds between Mn3+ and Mn4+}.
+
+
+This also leads to a very high magnetoelectric effect, because the susceptibility of the large Gd spins means that they can be relatively easily switched by an external magnetic field, in turn causing a large variation in the polarization.  
 \section{GdMn$_2$O$_5$}
-Before describing the underlying theory to describe the processes that happen in GdMn$_2$O$_5$, we focus first on the symmetries that govern the magnetic configuration and which lead to the multiferroicity.
-
-Orthorhombic manganites $R$Mn$_2$O$_5$, with $R$ being one of the rare earth elements, all have space group $Pbam$ \cite{Alfonso97a}. Two nonequivalent Mn chains can be distinguished, harboring octahedrally coordinated Mn$^{4+}$ and pyramidally coordinated Mn$^{3+}$ ions. The localized spins on these ions couple strongly AFM 
-
-As is shown in Fig.~\ref{fig:GdMn2O5_unit_cell}   GdMn$_2$O$_5$ for a moment on the magnetic unit cell shown in . There are two differently oriented chains of Manganese atoms, distinguished by the light blue lines and polygons. Inside these chains there are both tetrahedrally coordinated (Mn$^{3+}$) and octahedrally coordinated (Mn$^{4+}$) manganese atoms. Due to the Goodenough-Kanamori rules\lp{citation!} these chains are strongly coupled AFM, leading us to assign one AFM order parameter for each ($L_1$ and $L_2$), this amounts to taking the rigid spin approximation in each chain. However, due to the same rules, the chains also couple AFM between eachother. When considering the Mn pentagons formed by the two chains around each of the Gd atoms, it becomes clear that there is a magnetic frustration in the system. This will cause the chains to cant a little to be more perpendicular to eachother which can then lead to an energy gain through small canting. This frustration breaks inversion symmetry and leads to the first contribution to the ferroelectric polarization through magnetostriction. However, due to the spins of the Gd atoms, and their strong AFM coupling to the surrounding Mn atoms, there is a second contribution to the ferroelectricity. This happens because the Gd atom will move towards the closest tetrahedrally coordinated Mn atom in an effort to optimize the super-exchange energy gain with it. These two contributions add up to a polarization of around 3600 $\mu C/cm^2$, which is tiny compared to proper ferroelectrics, but enormous for multiferroics. Lastly due to the size of the spin from the half-filled f-shell Gd atoms (nominally $S=\frac{7}{2}$), dipolar effects may play a role, and each of the Gd spins inside the unit cell need to be considered separately. 
+Due to the Goodenough-Kanamori rules\lp{citation!} these chains are strongly coupled AFM, leading us to assign one AFM order parameter for each ($L_1$ and $L_2$), this amounts to taking the rigid spin approximation in each chain. However, due to the same rules, the chains also couple AFM between eachother. When considering the Mn pentagons formed by the two chains around each of the Gd atoms, it becomes clear that there is a magnetic frustration in the system. This will cause the chains to cant a little to be more perpendicular to eachother which can then lead to an energy gain through small canting. This frustration breaks inversion symmetry and leads to the first contribution to the ferroelectric polarization through magnetostriction. However, due to the spins of the Gd atoms, and their strong AFM coupling to the surrounding Mn atoms, there is a second contribution to the ferroelectricity. This happens because the Gd atom will move towards the closest tetrahedrally coordinated Mn atom in an effort to optimize the super-exchange energy gain with it. These two contributions add up to a polarization of around 3600 $\mu C/m^2$, which is tiny compared to proper ferroelectrics, but enormous for multiferroics. Lastly due to the size of the spin from the half-filled f-shell Gd atoms (nominally $S=\frac{7}{2}$), dipolar effects may play a role, and each of the Gd spins inside the unit cell need to be considered separately. 
 \begin{figure}
 	\IncludeGraphics{unit_cell}
 	\caption{\label{fig:GdMn2O5_unit_cell}}
