--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -65,11 +65,11 @@ These contributions, together with the two parts of the Bloch functions (i.e. th
 \IncludeGraphics[width=0.5\linewidth]{V2V3drawing.png}\caption{\label{fig:Efield_cell_drawing} Pictorial representation of the different electric fields present in the crystal. The black lines denote the atomic potential and electric field, $V_{at}$ and $E_{at}$ respectively, and the contribution due to ferroelectricity, $V_P$ and $E_P$. The green and red graphs denote the periodic ($u(\bm{k}, \bm{r})_n$) and envelope part of the Bloch functions, respectively.}
 \end{figure}
 
-Looking at the picture, it becomes clear that the contribution of the atomic potential applied to the envelope function is zero because while $k$ is a constant, $E_{at}$ is odd throughout the unit cell, leading to the contributions on either side of the potential well to cancel out. Thus the only contribution to the first term in Eq. \ref{eq:kp_expansion} comes only from the uniform (even) $E_P$, which in general is very small compared to the atomic one. A similar argument can be applied to the contribution to $V_3$. Here we can see that due to the shape of the periodic part of the wavefunction, only the contribution coming from $E_{at}$ will be nonzero, this is essentially the well-known atomic spin-orbit coupling and can be rather large. 
+Looking at the picture, it becomes clear that the contribution of the atomic potential applied to the envelope function is zero because while $k$ is a constant, $E_{at}$ is odd throughout the unit cell, leading to the contributions on either side of the potential well to cancel out. Thus the only contribution to the first term in Eq. \ref{eq:kp_expansion} comes only from the uniform (even) $E_P$, which in general is very small compared to the atomic one. A similar argument can be applied to the contribution to $V_3$. Due to the shape of the periodic part of the wavefunction, only the contribution coming from $E_{at}$ will be nonzero, this is essentially the well-known atomic spin-orbit coupling and can be rather large. 
 
 In the following it is assumed that Eq.~\ref{eq:Rashba_unk_Vs} can be solved for a time reversal (TR) invariant point $\bm{k}_0$ in the first BZ, where the two spin states are necessarily degenerate. Due to the broken inversion symmetry and inclusion of the SOC terms ($V_2$,$V_3$), this degeneracy will be broken for $k$ points away from the TR invariant point.
 We denote the two degenerate states at $\bm{k}_0$ by $\Ket{u_n^\downarrow}$ and $\Ket{u_n^\uparrow}$. It is important to realize that the orientation of spin axis of the eigenstates of Eq.~\ref{eq:Rashba_unk_Vs} depends on the direction of both $\bm{k}$ and $\bm{P}$, as will become clear later.
-Without loss of generality we can take $\bm{k}_0 = \bm{0}$ and $E^{\uparrow,\downarrow}_n(\bm{0}) = 0$.
+Without loss of generality we take $\bm{k}_0 = \bm{0}$ and $E^{\uparrow,\downarrow}_n(\bm{0}) = 0$.
 Expanding in the deviation away from the high-symmetry point, in the usual $\bm{k}\cdot\bm{p}$ sense, and keeping only linear $\bm{k}$ terms and terms up to second order in $1/c$, we get
 \begin{align}
 	\label{eq:kp_expansion}
@@ -167,8 +167,7 @@ which has the from of Eq.~\ref{eq:Rashba_form}.
 From this qualitative derivation, it is clear that the main reason behind the orbital Rashba effect can be traced back to the observation that Bloch functions with nonzero OAM have electric dipoles that couple to the inversion symmetry breaking electric field. We identified two sources that lead to the effect: the first one comes from the direct overlap dipoles between $p_x$ and $p_y$ orbitals, and the $p_z$ orbital\cite{Petersen2000}, the second is due to the hybridization of the $s$ and $p_z$ overlap, and the kinetic energy term between the $s$ and neighboring $p_x$ and $p_y$ orbitals\cite{Go2016}. These two terms are reflected in the two terms that contribute to $\Theta$, and lead to a chiral, linear-in-$k$ texture of the OAM.
 If there then exists strong atomic SOC, this linear-in-$k$ OAM will couple to the spin and result in the final Rashba-like form of Eq.~\ref{eq:Rashba_from_OAM}.
 
-There is one final term that contributes to the linear variation of OAM with $\bm{k}$, which is only present when there is an unquenching of the OAM at the high symmetry point ($|k|=0$) due to the atomic SOC \ref{Park2011}. This is due to the energy gain from $\hat{H}_{soc}$ if the material has orbitals that have $\bm{j} = \bm{l} + \frac{1}{2}\bm{\sigma}$. Similar to the above derivation, we can look at a small-$k$ expansion for orbitals that have nonzero OAM.
-We can write in general that
+There is one final term that contributes to the linear variation of OAM with $\bm{k}$, which is only present when there is an unquenching of the OAM at the high symmetry point ($|k|=0$) due to the atomic SOC \ref{Park2011}. This is due to the energy gain from $\hat{H}_{soc}$ if the material has orbitals that have $\bm{j} = \bm{l} + \frac{1}{2}\bm{\sigma}$. Similar to the above derivation a small-$k$ expansion for orbitals with nonzero OAM can be performed, leading in general to:
 \begin{equation}
 	\Bra{\alpha} \hat{L}_{\gamma} \Ket{\beta} = i \epsilon_{\alpha \beta \gamma} c^*_\alpha c_\beta
 \end{equation}
@@ -194,8 +193,9 @@ With the understanding that one can find Rashba like dispersions, coming not fro
 \caption{\label{fig:Rashba_BZBSDOS}(a) Rhombohedral unit cell and Brillouin zone of GeTe, with the polarization direction in yellow. (b) Band structure obtained from a DFT calculation with and without SOC, along the blue path in panel (a). (c) partial DOS for Te and Ge p orbitals computed without SOC.}
 \end{figure}
 \section{Overview: Germanium Telluride}
-The space group of GeTe is R$3m$ (\#160 in International Tables), with ferroelectric polarization along the threefold rotation $z$-axis caused by an off-centering of the central Te atom \cite{Rabe1987} as displayed in Fig. \ref{fig:Rashba_BZBSDOS}-(a). The valence and conduction bands are formed mostly by $s$ and $p$ orbitals from Te and Ge, respectively. This, together with the large spin-splitting in the vicinity of the $Z$ point \cite{DiSante2013} as observed from the bandstructure in Fig. \ref{fig:Rashba_BZBSDOS}-(b), lends it as a perfect test-case of the above described mechanisms. Moreover, since it is a bulk material, we can rule out the possibility that the relativistic Rashba effects results in a contribution from the existence of possible large potential gradients at a surface. The band structure,  presents a distinct large linear spin splitting around the $Z$ point, resembling the well known Rashba effect. Due to time reversal symmetry, spin-splitting is only present along the $Z-A$ and $Z-U$ paths, not the $Z-\Gamma$ path.
-The density of states (DOS), displayed in Fig.~\ref{fig:Rashba_BZBSDOS}-(c), confirms the orbital character of the bands, aluded to earlier.
+The space group of GeTe is R$3m$ (\#160 in International Tables), with ferroelectric polarization along the threefold rotation $z$-axis caused by an off-centering of the central Te atom \cite{Rabe1987} as displayed in Fig.~\ref{fig:Rashba_BZBSDOS}-(a). The valence and conduction bands are formed mostly by $s$ and $p$ orbitals from Te and Ge, respectively.
+This, together with the large spin-splitting in the vicinity of the $Z$ point \cite{DiSante2013} as observed from the bandstructure in Fig.~\ref{fig:Rashba_BZBSDOS}-(b), lends it as a perfect test-case for the above described mechanisms. Moreover, since it is a bulk material, the relativistic Rashba effects contribute negligibly due to the small potential gradients caused by bulk ferroelectricity. The band structure,  presents a distinct large linear spin splitting around the $Z$ point, along the $Z-A$ and $Z-U$ paths. The $Z-\Gamma$ path shows no splitting because the electric field is along the $z$ direction, and as shown by the above derivation, only $k_x$ and $k_y$ will show a linear splitting.
+The density of states (DOS), displayed in Fig.~\ref{fig:Rashba_BZBSDOS}-(c), confirms the orbital character of the bands.
 % The valence bands are comprised mostly of Te 5p orbitals, whereas the conduction bands are mostly formed by Ge 4p orbitals. This orbital character of valence and conduction bands, together with the stronger atomic SOC on Te atom, results in a more pronounced spin splitting in the valence bands. We will focus on the first three valence bands, the top one of which mainly has $p_z$ character whereas the two lower bands, which are degenerate at the $Z$-point, are formed by $p_x$ and $p_y$ orbitals. The crystal field splitting between bands of $p_z$ and $p_{x,y}$ characters results from the distortion of the ideal Te-Ge$_6$ octahedron.
 % \begin{figure*}[ht!]
 % \centering
@@ -262,7 +262,7 @@ The density of states (DOS), displayed in Fig.~\ref{fig:Rashba_BZBSDOS}-(c), con
 % where we only included terms with the $E_z$ component.
 
 \section{Methods}
-To clarify the Orbital Rashba effect in GeTe, we performed ab-initio DFT calculations using the Quantum-Espresso software package\cite{Giannozzi2009}. In order to confirm the linear varying OAM even when spin-orbit is not included we performed non-relativistic, as well as relativistc calculations. Both were performed using ONCVPSP pseudopotentials, with 30 Ry for the energy cutoff, and 160 Ry for the density cutoff. The reciprocal space was sampled using a 10x10x10 and 6x6x6 Monkhorst-Pack grid for the self-consistent and non-self-consistent calculations, respectively, using an energy convergence threshold of $10^{-7}Ry$. Afterwards we used the Wannier90 package \cite{Mostofi2014AnFunctions} to perform the Wannierization, using atomic $s$ and $p$-orbitals on both Ge and Te. This provides us with the tools to analyze the real space properties of Bloch functions such as the dipole moment and OAM. 
+We performed ab-initio DFT calculations using the Quantum-Espresso software package\cite{Giannozzi2009}. In order to confirm the linear varying OAM even when spin-orbit is not included we performed non-relativistic, as well as relativistc calculations. Both were performed using ONCVPSP pseudopotentials, with 30 Ry for the energy cutoff, and 160 Ry for the density cutoff. The reciprocal space was sampled using a 10x10x10 and 6x6x6 Monkhorst-Pack grid for the self-consistent and non-self-consistent calculations, respectively, using an energy convergence threshold of $10^{-7}Ry$. Afterwards we used the Wannier90 package \cite{Mostofi2014AnFunctions} to perform the Wannierization, using atomic $s$ and $p$-orbitals on both Ge and Te. This provides us with the tools to analyze the real space properties of Bloch functions such as the dipole moment and OAM. 
 
 \section{Band structure}
 % % ~\centering
